rgbds-0.6.1/test/asm/incbin-empty-bad.err
error: incbin-empty-bad.asm(3):
    Specified range in INCBIN is out of bounds (0 + 1 > 0)
error: Assembly aborted (1 error)!
