rgbds-0.6.1/test/asm/incbin-empty-bad.asm
SECTION "Test", ROM0

INCBIN "empty.bin", 0, 1
